[package]
name = "terminal-emulator"
version = "0.1.0"
edition = "2024"
authors = ["Julio César Mejía Terán"]
description = "Un emulador de terminal simple en Rust con fines educativos."
license = "MIT"
repository = "https://github.com/jcmt2k/terminal-emulator.git"
keywords = ["terminal", "emulator", "cli", "rust", "learning"]
categories = ["command-line-utilities", "emulators"]

[dependencies]
crossterm = "0.27.0"
vte = "0.11.0"
pty-process = "0.4.0"
